# rs-griditer

./: Cargo.toml  README.md  README.tpl
src/: coord.rs  lib.rs
src/iter/: bresenham.rs  mod.rs  perimeter.rs
